Add installation script